objects/Presentation__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>Presentations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>Presentations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microsite_ID__c</fullName>
        <label>Microsite ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Presentation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Presentation</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Presentations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>